<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="pclsViewModel"
            type="com.example.android.plutus.PclsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PclsFragment">

        <LinearLayout
            android:id="@+id/pcls_input_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/calculate_pcls_button"
            app:layout_constraintEnd_toEndOf="@+id/calculate_pcls_button"
            app:layout_constraintStart_toStartOf="@+id/calculate_pcls_button"
            app:layout_constraintTop_toBottomOf="@+id/pcls_title_linear_layout">

            <LinearLayout
                android:id="@+id/pcls_input_ll_column_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pension_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pension" />

                <TextView
                    android:id="@+id/commutation_factor_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/commutation_factor" />

                <TextView
                    android:id="@+id/dc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/money_purchase_fund" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pcls_input_ll_column_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.cottacush.android.currencyedittext.CurrencyEditText
                    android:id="@+id/pension_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pension_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={pclsViewModel.fullPension}" />

                <EditText
                    android:id="@+id/commutation_factor_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/commutation_factor_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={pclsViewModel.commutationFactor}"/>

                <com.cottacush.android.currencyedittext.CurrencyEditText
                    android:id="@+id/dc_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dc_fund_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={pclsViewModel.dcFund}"/>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/calculate_pcls_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toTopOf="@+id/combined_linear_layout"
            app:layout_constraintEnd_toEndOf="@+id/combined_linear_layout"
            app:layout_constraintStart_toStartOf="@+id/combined_linear_layout"
            app:layout_constraintTop_toBottomOf="@+id/pcls_input_linear_layout" />

        <LinearLayout
            android:id="@+id/db_only_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_text"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/db_ll_column_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/db_pcls_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/db_pcls" />

                <TextView
                    android:id="@+id/db_residual_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/residual_pension" />

                <TextView
                    android:id="@+id/db_dc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/money_purchase_fund"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/db_lta_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/lta_used" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/db_ll_column_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/db_pcls_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{String.valueOf(pclsViewModel.dbBenOutput.pcls)}"
                    tools:text="£10,000.00" />

                <TextView
                    android:id="@+id/db_residual_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{String.valueOf(pclsViewModel.dbBenOutput.residualPension)}"
                    tools:text="£2,000.00" />

                <TextView
                    android:id="@+id/db_dc_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{String.valueOf(pclsViewModel.dbBenOutput.dcFund)}"
                    android:visibility="gone"
                    tools:text="£15,000.00" />

                <TextView
                    android:id="@+id/db_lta_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{String.valueOf(pclsViewModel.dbBenOutput.lta)}"
                    tools:text="10.00%" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/combined_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/or_text"
            app:layout_constraintEnd_toEndOf="@+id/or_text"
            app:layout_constraintStart_toStartOf="@+id/or_text"
            app:layout_constraintTop_toBottomOf="@+id/calculate_pcls_button">

            <LinearLayout
                android:id="@+id/combined_ll_column_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/combined_pcls_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/combined_pcls" />

                <TextView
                    android:id="@+id/combined_residual_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/residual_pension" />

                <TextView
                    android:id="@+id/combined_lta_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/lta_used" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/combined_ll_column_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/combined_pcls_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@{String.valueOf(pclsViewModel.cmbBenOutput.pcls)}"
                    android:gravity="center_vertical"
                    tools:text="£10,000.00" />

                <TextView
                    android:id="@+id/combined_residual_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{String.valueOf(pclsViewModel.cmbBenOutput.residualPension)}"
                    tools:text="£2,000.00" />

                <TextView
                    android:id="@+id/combined_lta_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@{String.valueOf(pclsViewModel.cmbBenOutput.Lta)}"
                    android:gravity="center_vertical"
                    tools:text="10.00%" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pcls_title_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pcls_input_linear_layout"
            app:layout_constraintEnd_toEndOf="@+id/pcls_input_linear_layout"
            app:layout_constraintStart_toStartOf="@+id/pcls_input_linear_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plutus_icon"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="VectorDrawableCompat"
                tools:layout_editor_absoluteX="152dp" />

            <TextView
                android:id="@+id/pcls_calc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/standard_pcls_title"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="147dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/db_only_linear_layout"
            app:layout_constraintEnd_toEndOf="@+id/db_only_linear_layout"
            app:layout_constraintStart_toStartOf="@+id/db_only_linear_layout"
            app:layout_constraintTop_toBottomOf="@+id/combined_linear_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>