...

    <LinearLayout
      android:id="@+id/contents_title_linear_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/pcls_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      tools:ignore="UseCompoundDrawables">

...
